2013-03-29  Tobias Burnus  <burnus@net-b.de>

PR fortran/35203
        * trans-decl.c (create_function_arglist): Pass hidden argument
        for passed-by-value optional+value dummies.
        * trans-expr.c (gfc_conv_expr_present,
        gfc_conv_procedure_call): Handle those.

2013-03-29  Tobias Burnus  <burnus@net-b.de>

        PR fortran/35203
        * gfortran.dg/optional_absent_3.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@197252 138bc75d-0d04-0410-961f-82ee72b054a4